--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <body>
     <nav class="navbar">
         <ul>
-            <li>Buying</li>
-            <li>Renting</li>
-            <li>Selling</li>
+            <li> <a href=""> Buying </a></li>
+            <li> <a href=""> Renting </a></li>
+            <li> <a href=""> Selling </a></li>
         </ul>
         <div class="icon">
             <div class="logo">
@@ -27,9 +27,9 @@
         </div>
 
         <ul>
-            <li>About us</li>
-            <li>Services</li>
-            <li>Contact</li>
+            <li> <a href=""> About us</a> </li>
+            <li> <a href=""> Services</a> </li>
+            <li> <a href=""> Contact</a> </li>
         </ul>
     </nav>
     <div class="eclipse">
@@ -376,12 +376,12 @@
                 <h5>Most renty</h5>
                 <hr>
                 <ul>
-                    <li>FAQ</li>
-                    <li>ABout Us</li>
-                    <li>Contact Us</li>
-                    <li>Feedback</li>
-                    <li>Join Our Community</li>
-                    <li>Agent support</li>
+                    <li> <a href=""> FAQ</a></li>
+                    <li> <a href=""> About Us</a></li>
+                    <li> <a href=""> Contact Us</a></li>
+                    <li> <a href=""> Feedback</a></li>
+                    <li> <a href=""> Join Our Community</a></li>
+                    <li> <a href=""> Agent support</a></li>
                 </ul>
             </div>
             <div class="stay-connected">
@@ -400,10 +400,19 @@
         </div>
 
         <div class="social-link">
-            <img src="img/instagram.svg" alt="">
-            <img src="img/facebook.svg" alt="">
-            <img src="img/linkedin.svg" alt="">
-            <img src="img/twitter.svg" alt="">
+            <a href="">
+                <img src="img/instagram.svg" alt="">
+            </a>
+            <a href="">
+                <img src="img/facebook.svg" alt="">
+            </a>
+            <a href="">
+                <img src="img/linkedin.svg" alt="">
+            </a>
+            <a href="">
+                <img src="img/twitter.svg" alt="">
+            </a>
+
         </div>
         <div class="vision">
             <p>Renty Group is committed to ensuring digital accessibility for individuals with disabilities. We are
@@ -417,8 +426,8 @@
                 </p>
             </div>
             <ul>
-                <li>Terms of Use</li>
-                <li>Terms & Privacy</li>
+                <li> <a href=""> Terms of Use </a></li>
+                <li> <a href=""> Terms & Privacy</a></li>
             </ul>
         </div>
     </footer>
